<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calendar</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="login_username_hint">GASPAR username</string>
    <string name="login_password_hint">GASPAR password</string>
    <string name="login_submit_text">Login using Tequila</string>
    <string name="error_empty_credentials">Fill Username and Password in</string>
    <string name="be_patient">Please be patient</string>
    <string name="authenticating">Authenticating&#8230;</string>
    <string name="uploading">Uploading data&#8230;</string>
    <string name="loading">Loading;</string>
    <string name="error_http_protocol">HTTP Protocol error!</string>
    <string name="error_io">Unknown IO error</string>
    <string name="error_illegal_state">Illegal State error</string>
    <string name="error_parse_response">Cannot parse response!</string>
    <string name="error_execution">Error during execution</string>
    <string name="error_interruption">Interruption during process</string>
    <string name="error_wrong_credentials">Username and/or Password is wrong</string>
    <string name="error_disconnected">You were disconnected, please login !</string>
    <string name="login_success">Successfully logged in!</string>
    <string name="error_authentication_cancel">Authentication was cancelled!</string>
    <string name="network_unreachable">Network unreachable, please verify your connection</string>
    <string name="calendar_client_ex_msg">An error occurred. Please check your network and try again later.</string>
    <string name="title_activity_course_details">CourseDetailsActivity</string>
    <string name="title_activity_courses_list">CoursesListActivity</string>
    <string name="to_list_course_button">To list course</string>
    <string name="action_courses_list">Courses</string>
    <string name="action_add_events">Add Events</string>
    <string name="action_update_activity">Update data</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_today">Go to today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="action_event_list">Planning</string>
    <string name="add_event">Add an Event</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="start_event_text_date">Start of the Event (Date)</string>
    <string name="start_event_text_hour">Start of the Event (Hour)</string>
    <string name="end_event_text_date">End of the Event (Date)</string>
    <string name="end_event_text_hour">End of the Event (Hour)</string>
    <string name="valid_event">Create the event</string>
    <string name="name_event_edit">Name of the event</string>
    <string name="title_activity_add_blocks">AddBlocksActivity</string>
    <string name="greeter_add_blocks">It seems like you did not fill all your week up with your timetable according to your credits. To add an element to the timetable, click on the course:</string>
    <string name="greeter_no_more_blocks">There are no more blocks to be placed into the calendar, your week is full, good work !</string>
    <string name="action_add_blocks">Add blocks of credits</string>
    <string name="description_event_edit">Enter the description of the event</string>
    <string name="choose_day_block"> Which day of the week do you wish to work on</string>
    <string-array name="week_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="saving_db">Saving data on device&#8230;</string>
    <string name="loading_app_engine">Loading data&#8230;</string>

    <!-- Toast messages -->
    <string name="authenticated">Authenticated</string>
    <string name="updated">Updated</string>
    <string name="title_activity_credits">Credits</string>
    <string name="ok">OK</string>
    <string name="title_activity_add_event_block">AddEventBlockActivity</string>
    <string name="title_activity_default_action_bar">DefaultActionBarActivity</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="hello_world">Hello world!</string>
    <string-array name="yes_or_no">
        <item>Yes</item>
        <item>No</item>
        <item>Cancel</item>
    </string-array>
    <string-array name="choice_on_event">
        <item>Edit</item>
        <item>Delete</item>
        <item>Visit course</item>
    </string-array>
    <string name="title_activity_event_list">EventListActivity</string>
    <string name="reversed_dates">
        The end date cannot be before the start date. Please modify the dates and try again.
    </string>
    <string name="go_to_calendar">Calendar</string>
</resources>
