<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.epfl.calendar.MainActivity" >

    <item
        android:id="@+id/action_courses_list"
        android:showAsAction="never"
        android:title="@string/action_courses_list"/>
    <item
        android:id="@+id/action_draft_activity"
        android:showAsAction="never"
        android:title="@string/action_draft_activity"/>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_today"
        android:orderInCategory="100"
        android:title="@string/action_today"/>
    <item
        android:id="@+id/action_day_view"
        android:orderInCategory="100"
        android:title="@string/action_day_view"/>
    <item
        android:id="@+id/action_three_day_view"
        android:checked="true"
        android:orderInCategory="100"
        android:title="@string/action_three_day_view"/>
    <item
        android:id="@+id/action_week_view"
        android:orderInCategory="100"
        android:title="@string/action_week_view"/>
    <item
        android:id="@+id/add_event"
        android:orderInCategory="100"
        android:title="@string/add_event"/>

</menu>