<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.epfl.calendar.DefaultActionBarActivity" >

    <item
        android:id="@+id/action_courses_list"
        android:showAsAction="never"
        android:title="@string/action_courses_list"/>
    
    <item
        android:id="@+id/add_event_block"
        android:showAsAction="never"
        android:title="@string/action_add_blocks" />
    
    <item
        android:id="@+id/action_update_activity"
        android:showAsAction="never"
        android:title="@string/action_update_activity"/>
    <item
        android:id="@+id/action_event_list"
        android:showAsAction="never"
        android:title="@string/action_event_list"/>
    
    <item
        android:id="@+id/action_logout"
        android:showAsAction="never"
        android:title="@string/action_logout"/>
    
    <item
        android:id="@+id/action_credits"
        android:showAsAction="never"
        android:title="@string/action_credits"/>
    
    <item
        android:id="@+id/add_event"
        android:title="@string/add_event"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_calendar"
        android:showAsAction="ifRoom"
        android:title="@string/go_to_calendar"
        android:icon="@drawable/ic_action_go_to_today"/>

</menu>