<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.calendar.authentication.AuthenticationActivity" >

    <EditText 
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:hint="@string/login_username_hint"
        android:inputType="text|textShortMessage"
        android:padding="15dp"
        />
    
    <EditText 
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txtUsername"
        android:textSize="20sp"
        android:hint="@string/login_password_hint"
        android:inputType="text|textPassword"
        android:padding="15dp"
        />
   
    <Button
	    android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_submit_text"
        android:layout_below="@id/txtPassword"
        />

</RelativeLayout>
