<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="${relativePackage}.${activityClass}" >

        <Spinner
            android:id="@+id/spinner_week_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/background_customised"
            android:padding="10dp" />

        <TextView
            android:id="@+id/start_event_text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_week_days"
            android:layout_marginLeft="10sp"
            android:text="@string/start_event_text_date" />

        <Button
            android:id="@+id/start_event_dialog_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp"
            android:layout_below="@id/start_event_text_date"
            android:background="@drawable/background_customised"
            android:padding="10dp" />

        <TextView
            android:id="@+id/end_event_text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_event_dialog_hour"
            android:layout_marginLeft="10sp"
            android:text="@string/end_event_text_date" />

        <Button
            android:id="@+id/end_event_dialog_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp"
            android:layout_below="@id/end_event_text_date"
            android:background="@drawable/background_customised"
            android:padding="10dp" />

        <Button
            android:id="@+id/valid_block_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp"
            android:layout_below="@id/end_event_dialog_hour"
            android:background="@drawable/background_customised"
            android:onClick="finishActivity"
            android:text="@string/valid_event" />
    </RelativeLayout>

</ScrollView>